@@ -156,6 +156,15 @@
 	* reload1.c (merge_assigned_reloads) : Do not merge a RELOAD_OTHER
 	instruction with a RELOAD_FOR_OPERAND_ADDRESS instruction.
 
+2007-04-24  Richard Henderson  <rth@redhat.com> (r124106)
+
+	* libgcc2.h (AVOID_FP_TYPE_CONVERSION): Rename from 
+	IS_IBM_EXTENDED.  Also define in terms of WIDEST_HARDWARE_FP_SIZE.
+	* libgcc2.c (__floatdisf): Avoid double-word arithmetic when
+	looking for non-zero bits shifted out.  Avoid a recursive call
+	when constructing the scalar.
+	(__floatundisf): Likewise.
+
 2007-04-16  Lawrence Crowl  <crowl@google.com> (r123909)
 
 	* doc/invoke.texi (Debugging Options): Add documentation for the
@@ -247,6 +256,11 @@
 
 	* tree-vrp.c (vrp_int_const_binop): Handle PLUS_EXPR and
 	the *_DIV_EXPR codes correctly with overflow infinities.
+
+2007-03-04  Zdenek Dvorak  <dvorakz@suse.cz> (r122528)
+
+	* tree-ssa-address.c (create_mem_ref): Do not put an expression
+	containing a cast to the base of TARGET_MEM_REF.
 
 2007-02-09  Dwarakanath Rajagopal <dwarak.rajagopal@amd.com> (r121763)
 
@@ -423,6 +437,11 @@
 	* doc/invoke.texi: Add documentation on flags for sse4a, abm, popcnt
 	and amdfam10.
 	* doc/extend.texi: Add documentation for SSE4A builtins.
+
+2007-02-01  Zdenek Dvorak <dvorakz@suse.cz> (r121464)
+
+	* toplev.c (lang_dependent_init): Call init_set_costs.
+	* loop-init.c (loop_optimizer_init): Do not call init_set_costs.
 
 2007-01-24  Jakub Jelinek  <jakub@redhat.com> (r121140)
 
